display correct menu name and not the key

--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -9,7 +9,11 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                            {{ activeMenu }}
+                            {% if menu and menu[activeMenu] %}
+                            {{ menu[activeMenu].title }}
+                            {% else %}
+                                {{ activeMenu }}
+                            {% endif %}
                         </a>
                     </h4>
                 </div>
