--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -76,7 +76,7 @@ body {
     padding-bottom: 10px;
     text-shadow: 0 1px 0 #7cabd4;
     background-color: #84b4dd;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 /* All levels of nav */
