disable affix if sidebar is larger than window

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -145,6 +145,7 @@ body {
 }
 @media (min-width: 1200px) {
     /* Widen the fixed sidebar again */
+    #sidebar,
     #sidebar.affix-bottom,
     #sidebar.affix-top,
     #sidebar.affix {
