--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -3,12 +3,9 @@
 <head>
     <title>Piwik - Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet" media="screen">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="/js/html5shiv.3.7.0.js"></script>
     <script src="/js/respond.min.1.3.0.js"></script>
@@ -37,7 +34,7 @@
                 <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
                 <li><a href="http://piwik.org/" target="_blank">Piwik</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </div>
 
@@ -70,6 +67,7 @@
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/app.js"></script>
+
 <!-- Piwik -->
 <script type="text/javascript">
     var _paq = _paq || [];
@@ -86,5 +84,6 @@
     })();
 </script>
 <!-- End Piwik Code -->
+
 </body>
 </html>
