improve page load time

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -70,18 +70,26 @@
 
 <!-- Piwik -->
 <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(["setCookieDomain", "*.piwik.org"]);
-    _paq.push(["trackPageView"]);
-    _paq.push(["enableLinkTracking"]);
+    function track() {
+        var _paq = _paq || [];
+        _paq.push(["setCookieDomain", "*.piwik.org"]);
+        _paq.push(["trackPageView"]);
+        _paq.push(["enableLinkTracking"]);
 
-    (function() {
-        var u=(("https:" == document.location.protocol) ? "https" : "http") + "://demo.piwik.org/";
-        _paq.push(["setTrackerUrl", u+"piwik.php"]);
-        _paq.push(["setSiteId", "36"]);
-        var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
-        g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
-    })();
+        (function() {
+            var u=(("https:" == document.location.protocol) ? "https" : "http") + "://demo.piwik.org/";
+            _paq.push(["setTrackerUrl", u+"piwik.php"]);
+            _paq.push(["setSiteId", "36"]);
+            var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
+            g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
+        })();
+    }
+
+    if (window.addEventListener) { window.addEventListener("load", track, false); }
+    else if (window.attachEvent) { window.attachEvent("onload",track); }
+    else {
+        track();
+    }
 </script>
 <!-- End Piwik Code -->
 
