updated menu title

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -33,7 +33,7 @@
                     </li>
                 {% endfor %}
                 <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
-                <li><a href="http://piwik.org/" target="_blank">Piwik</a></li>
+                <li><a href="http://piwik.org/" target="_blank">Piwik.org</a></li>
             </ul>
         </div>
     </div>
