fix link to edit document

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -61,7 +61,7 @@
 
         <footer>
             <p class="pull-left">&copy; Piwik.org</p>
-            <p class="pull-rightg">{% if linkToEditDocument is defined and linkToEditDocument %}
+            <p class="pull-right">{% if linkToEditDocument is defined and linkToEditDocument %}
                     <a href="{{ linkToEditDocument }}" target="_blank">Edit on GitHub</a>
                 {% endif %}</p>
         </footer>
