--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav">
                 <li {% if isHome is defined and isHome %} class="active"{% endif %}><a href="/">Home</a></li>
                 {% for item in menu %}
-                    <li {% if path == item.url %} class="active"{% endif %}>
+                    <li {% if activeMenu == item.title %} class="active"{% endif %}>
                         <a href="{{ item.url }}">{{ item.title }}</a>
                     </li>
                 {% endfor %}
