--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -12,7 +12,7 @@
     <![endif]-->
 
 </head>
-<body data-spy="scroll" data-target="#sidebar">
+<body>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
