do not open this link in new window

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -65,7 +65,7 @@
             <a href="{{ linkToEditDocument }}" target="_blank">Edit on GitHub</a>
                 {% endif %}</p>
             <p class="pull-right">
-                <a href="mailto:developer@piwik.org" target="_blank">Give Feedback</a>{% if linkToEditDocument is defined and linkToEditDocument %}&nbsp;|&nbsp;{% endif %}
+                <a href="mailto:developer@piwik.org">Give Feedback</a>{% if linkToEditDocument is defined and linkToEditDocument %}&nbsp;|&nbsp;{% endif %}
             </p>
         </footer>
     </div>
