--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -3,12 +3,12 @@
 <head>
     <title>Piwik - Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/bootstrap.min.css?rev={{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
-    <link href="/css/font-awesome.min.css?rev={{ revision|e('html_attr') }}" rel="stylesheet">
-    <link href="/css/app.css?rev={{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
+    <link href="/css/bootstrap.min.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
+    <link href="/css/font-awesome.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
+    <link href="/css/app.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <!--[if lt IE 9]>
-    <script src="/js/html5shiv.3.7.0.js?rev={{ revision|e('html_attr') }}"></script>
-    <script src="/js/respond.min.1.3.0.js?rev={{ revision|e('html_attr') }}"></script>
+    <script src="/js/html5shiv.3.7.0.js?{{ revision|e('html_attr') }}"></script>
+    <script src="/js/respond.min.1.3.0.js?{{ revision|e('html_attr') }}"></script>
     <![endif]-->
 
 </head>
@@ -71,9 +71,9 @@
     </div>
 {% endblock %}
 
-<script src="/js/jquery.js?rev={{ revision|e('html_attr') }}"></script>
-<script src="/js/bootstrap.min.js?rev={{ revision|e('html_attr') }}"></script>
-<script src="/js/app.js?rev={{ revision|e('html_attr') }}"></script>
+<script src="/js/jquery.js?{{ revision|e('html_attr') }}"></script>
+<script src="/js/bootstrap.min.js?{{ revision|e('html_attr') }}"></script>
+<script src="/js/app.js?{{ revision|e('html_attr') }}"></script>
 
 <!-- Piwik -->
 <script type="text/javascript">
