Fix closing tag.

--- a/app/templates/macros.twig
+++ b/app/templates/macros.twig
@@ -14,6 +14,6 @@
         </div>
         {% if loop.index0 % 3 == 2 or loop.last %}
         </div>
-        {% %}
+        {% endif %}
     {% endfor %}
 {% endmacro %}
