--- a/generator/template/hooks.twig
+++ b/generator/template/hooks.twig
@@ -17,7 +17,7 @@ This is a complete list of available hooks.
 _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piwik/blob/{{ versionName }}{{ hook.file }}) in line [{{ hook.line }}](https://github.com/piwik/piwik/blob/{{ versionName }}{{ hook.file }}#L{{ hook.line }})_
 
 {% if hook.comment %}
-{{ hook.comment.shortDesc|raw }}{% if hook.comment.longDesc %} {{ hook.comment.longDesc|raw }}{% endif %}
+{{ hook.comment.shortDesc|linkparser(hook)|raw }}{% if hook.comment.longDesc %} {{ hook.comment.longDesc|linkparser(hook)|raw }}{% endif %}
 {% endif %}
 
 {% if hook.arguments %}
