--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -10,14 +10,14 @@
 {% block content %}
 {% if class.shortdesc %}
 
-{{ class.shortdesc|linkparser(class)|raw }}
+{{ class.shortdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% if class.longdesc %}
 
 Description
 -----------
 
-{{ class.longdesc|linkparser(class)|raw }}
+{{ class.longdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% set found = false %}
 {% for constant in class.constants if constant.longdesc %}
@@ -31,7 +31,7 @@ Constants
 This {{ class_type(class) }} defines the following constants:
 
 {% for constant in class.constants if constant.longdesc %}
-- [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|linkparser(class)|raw }}{% endif %}
+- [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
@@ -40,7 +40,7 @@ This {{ class_type(class) }} defines the following constants:
 <a name="{{ constant.name }}" id="{{ constant.name }}"></a>
 ### `{{ constant.name }}`
 
-{{ constant.longdesc|linkparser(class)|raw }}
+{{ constant.longdesc|inlinelinkparser(class)|raw }}
 {% endfor %}
 {% endif %}
 {% if class.properties %}
@@ -51,7 +51,7 @@ Properties
 This {{ class_type(class) }} defines the following properties:
 
 {% for property in class.properties %}
-- [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|linkparser(class)|raw }}{% endif %}
+- [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
 {% for property in class.properties %}
@@ -61,13 +61,13 @@ This {{ class_type(class) }} defines the following properties:
 ### `${{ property.name }}`
 {% if property.shortdesc %}
 
-{{ property.shortdesc|linkparser(class)|raw }}
+{{ property.shortdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% if property.longdesc|raw %}
 
 #### Description
 
-{{ property.longdesc|linkparser(class)|raw }}
+{{ property.longdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 
 #### Signature
@@ -83,7 +83,7 @@ Methods
 The {{ class_type(class) }} defines the following methods:
 
 {% for method in class.methods %}
-- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|linkparser(class)|raw }}{% endif %}
+- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
 
@@ -93,13 +93,13 @@ The {{ class_type(class) }} defines the following methods:
 ### `{{ method.name }}()`
 {% if method.shortdesc %}
 
-{{ method.shortdesc|linkparser(class)|raw }}
+{{ method.shortdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% if method.longdesc %}
 
 #### Description
 
-{{ method.longdesc|linkparser(class)|raw }}
+{{ method.longdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% if method.tags("see") %}
 
